--- a/src/styles/Portafolio.css
+++ b/src/styles/Portafolio.css
@@ -1,6 +1,7 @@
 .works-container{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .work-item{
@@ -13,8 +14,8 @@
     width: 100%;
     height: 350px;
     overflow: hidden;
-    box-shadow: 0px 5px 15px #ddd;
-    border: 1px solid #eee;
+    border: 1px solid var(--text-pcolor);
+    border-radius: 10px;
 }
 
 .work-item .mask:hover img{
